welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:5: error: not found: value m
  if (m=='R'){
      ^BDRBuggle:7: error: not found: value m
  }else if (m=='L'){
            ^BDRBuggle:9: error: not found: value m
  }else if (m=='I'){
            ^BDRBuggle:13: error: not found: value m
  }else if (m=='A'){
            ^BDRBuggle:15: error: not found: value m
  }else if (m=='B'){
            ^BDRBuggle:17: error: not found: value m
  }else if (m=='C'){
            ^BDRBuggle:19: error: not found: value m
  }else if (m=='Z'){
            ^BDRBuggle:21: error: not found: value m
  }else if (m=='Y'){
            ^BDRBuggle:23: error: not found: value m
  }else if (m=='X'){
            ^